fixed css not covering content, starting preuse

--- a/client/src/stylesheets/elements.scss
+++ b/client/src/stylesheets/elements.scss
@@ -31,15 +31,16 @@
 
   h1 {
     color: white;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
     padding-left: 20px;
     text-align: center;
+    z-index: 1;
   }
 
   img {
     position: absolute;
     top: -40px;
     opacity: .6;
-    z-index: -1;
     width: 100%;
     transition: opacity .3s;
   }
